# songwalker-core

./: .gitignore  Cargo.toml  LICENSE
.github/: copilot-instructions.md
docs/: cursor_aware_plan.md  planned_keyboard_prototype.md  preset_system_test_plan.md  refactoring_plan.md  retro_synth_plan.md
src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  preset.rs  token.rs
src/dsp/: chorus.rs  composite.rs  compressor.rs  delay.rs  engine.rs  envelope.rs  filter.rs  mixer.rs  mod.rs  oscillator.rs  renderer.rs  reverb.rs  sampler.rs  tuner.rs  voice.rs
src/preset/: cache.rs  instance.rs  loader.rs  mod.rs  types.rs
