[package]
name = "songwalker_core"
version = "0.1.1"
edition = "2024"
description = "Core library for the SongWalker music programming language — lexer, parser, compiler, DSP engine, and WASM bindings"
license = "MIT"
repository = "https://github.com/clevertree/songwalker-core"
homepage = "https://songwalker.net"
readme = "README.md"
keywords = ["music", "synthesizer", "dsp", "chiptune", "wasm"]
categories = ["multimedia::audio", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ariadne = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.108"
