[package]
name = "songwalker_core"
version = "0.1.1"
edition = "2024"
description = "Core library for the SongWalker music programming language — lexer, parser, compiler, DSP engine, and WASM bindings"
license = "MIT"
repository = "https://github.com/clevertree/songwalker-core"
homepage = "https://songwalker.net"
readme = "README.md"
keywords = ["music", "synthesizer", "dsp", "chiptune", "wasm"]
categories = ["multimedia::audio", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ariadne = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.108"
# Core types & networking for preset management (used by VSTi & CLI)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.38", features = ["full"], optional = true }
base64 = { version = "0.22", optional = true }
directories = { version = "6", optional = true }
sha2 = { version = "0.10", optional = true }
hound = { version = "3.5", optional = true }
minimp3 = { version = "0.5", optional = true }

[features]
default = []
# Enable networking & catalog management capabilities
catalog = ["dep:reqwest", "dep:tokio", "dep:base64", "dep:directories", "dep:sha2", "dep:hound", "dep:minimp3"]
